# Kaptal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  skills-lock.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  a1b2c3d4e5f6_add_broker_connection_position_portfolio_.py  c8c170ebe0e1_add_cost_basis_and_pnl_fields_to_.py  f73260195f1c_add_oauth_fields_to_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  broker.py  health.py  portfolio.py
backend/app/core/: config.py  db.py  deps.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  broker_connection.py  portfolio_snapshot.py  position.py  user.py
backend/app/schemas/: __init__.py  auth.py  broker.py  user.py
backend/app/services/: auth_service.py  ibkr_flex_service.py  oauth_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: BrokerConnectModal.tsx  LanguageSwitcher.tsx  OrganicBackground.tsx  PerformanceChart.tsx  PortfolioPieChart.tsx  SummaryCard.tsx  ThemeToggle.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
nginx/: nginx.conf
(+4 files in other folders)
